# silvertune

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  ROADMAP.md
.github/workflows/: release.yml
build-test/: .ninja_deps  .ninja_log  CMakeCache.txt  Silvertune.clap  build.ninja  cmake_install.cmake
build-test/CPM_modules/: Findvst3sdk.cmake
build-test/libs/clap-wrapper/: cmake_install.cmake
build-test/libs/clap-wrapper/base-sdk-clap/: CTestTestfile.cmake  cmake_install.cmake
include/: font6x8.h  font_stb.h  gui.h  inter_fonts.h  silvertune.h  yin.h
src/: entry.cpp  entry.h  font_stb.cpp  font_stb_embed.cpp  gui_cocoa.mm  gui_win32.cpp  gui_x11.cpp  inter_black.cpp  parameters.cpp  plugin.cpp  processor.cpp  scale.cpp
tools/: gen_fonts.py
